--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,11 @@ data/generated/morph-geospiza-group.rds
 testimonials-nonames.md
 
 testimonials.md
+
+.Rhistory
+
+admin/class.txt
+
+admin/class2.txt
+
+voice.R
