--- a/.gitignore
+++ b/.gitignore
@@ -11,23 +11,15 @@ drafts/Bio*
 exercises/*
 drafts/1230200Database_S1.txt
 *.png
-
 Session.vim
-
 data/generated/morph-geospiza-group.rds
-
 *.docx
-
 *.pdf
-
 testimonials-nonames.md
-
 testimonials.md
-
 .Rhistory
-
 admin/class.txt
-
 admin/class2.txt
-
 voice.R
+whale*
+admin/
